# GroundsBot-Software

./: .gitignore  README.md  setup.sh  sourceme.sh
Arduino/: search
Arduino/motor_encoders/: Encoder.h  (+2 more)
bag/: spin_for_30_seconds.bag  spin_for_30_seconds_no_vel.bag
data/: calibration.txt  grudsby_doherty_1.kml  grudsby_doherty_2.kml  grudsby_doherty_3.kml  grudsby_doherty_4.kml  grudsby_doherty_5.kml  mower_path.kml  mower_path_old.kml  mower_region.kml
launch/: grudsby.launch  grudsby_ekf_test.launch  grudsby_ekf_test_gps_rtk.launch  grudsby_ekf_test_gps_rtk_denied.launch  grudsby_gazebo.launch  grudsby_gazebo_navstack.launch  grudsby_gazebo_planning.launch  grudsby_sim.launch  maze_demo.launch  navigation.launch  simple_sim_localization.launch
simulation/sim_ws/src/gazebo_grudsby/: CMakeLists.txt  package.xml
simulation/sim_ws/src/gazebo_grudsby/launch/: sim.launch
simulation/sim_ws/src/gazebo_grudsby/src/: grudsby_plugin.cpp
simulation/sim_ws/src/gazebo_grudsby/world/: grudsby.world
src/differential_drive/: CMakeLists.txt  package.xml
src/differential_drive/scripts/: diff_tf.py  twist_to_motors.py  vel_to_odom.py
src/grudsby_autonomy/: CMakeLists.txt  package.xml
src/grudsby_controller/: CMakeLists.txt  package.xml
src/grudsby_controller/src/: grudsby_controller.cpp
src/grudsby_costmap/: CMakeLists.txt  map.yaml  package.xml  setup.py
src/grudsby_costmap/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_local.yaml  global_costmap.yaml  local_costmap.yaml  planner-dwa.yaml  planner-eband.yaml  planner-teb.yaml  planner-teb_1.yaml  planner.yaml  shared_costmap.yaml
src/grudsby_costmap/launch/: cost-dwa.launch  cost-eband.launch  cost-teb.launch  cost.launch  cost_pc2ls.launch  view_robot.launch
src/grudsby_costmap/map/: map.yaml
src/grudsby_costmap/msg/: Throttle.msg
src/grudsby_costmap/rviz/: robot.rviz
src/grudsby_costmap/scripts/: obstacles.py
src/grudsby_costmap/test_utilities/: cmd_vel.sh  pub_costmap.sh
src/grudsby_costmap/urdf/: grudsby.urdf.xacro
src/grudsby_gazebo/: CMakeLists.txt  package.xml
src/grudsby_gazebo/models/: README.txt  moveToModelLibrary.sh
src/grudsby_gazebo/models/grass/: model.sdf
src/grudsby_gazebo/models/grudsby/: model.config  model.sdf
src/grudsby_gazebo/models/grudsby/meshes/: wheel.STL
src/grudsby_gazebo/models/grudsby_caster/: model.sdf
src/grudsby_gazebo/models/grudsby_gps/: model.config  model.sdf
src/grudsby_gazebo/models/grudsby_gps/meshes/: grudsby_gps.STL
src/grudsby_gazebo/models/grudsby_imu/: model.config  model.sdf
src/grudsby_gazebo/models/grudsby_imu/meshes/: grudsby_imu.STL
src/grudsby_gazebo/models/grudsby_laser/: model.config  model.sdf
src/grudsby_gazebo/models/grudsby_new/: model.config  model.sdf
src/grudsby_gazebo/models/grudsby_new/meshes/: caster_base.STL  caster_wheel.STL
src/grudsby_gazebo/models/zed_camera/: model.config  model.sdf
src/grudsby_gazebo/src/: grudsby_plugin.cpp
src/grudsby_gazebo/worlds/: grudsby.world
src/grudsby_imu_repeater/: CMakeLists.txt  package.xml  setup.py
src/grudsby_imu_repeater/scripts/: imu_repeater.py
src/grudsby_lowlevel/: CMakeLists.txt  package.xml
src/grudsby_lowlevel/launch/: grudsby_arduino.launch
src/grudsby_lowlevel/msg/: ArduinoResponse.msg  ArduinoVel.msg
src/grudsby_lowlevel/scripts/: vel_to_odom.py
src/grudsby_lowlevel/src/: grudsby_lowlevel.cpp
src/grudsby_map_server/: CMakeLists.txt  package.xml
src/grudsby_map_server/include/: winding_num.h
src/grudsby_map_server/launch/: map.launch
src/grudsby_map_server/src/: grudsby_map_server.cpp
src/grudsby_rfcomms/: CMakeLists.txt  package.xml
src/grudsby_rfcomms/msg/: emlid_reach_gps.msg
src/grudsby_rfcomms/src/: grudsby_gps.cpp
src/grudsby_sim_repeater/: CMakeLists.txt  package.xml
src/grudsby_sim_repeater/scripts/: sim_repeater.py
src/grudsby_simple_planner/: CMakeLists.txt  package.xml
src/grudsby_simple_planner/msg/: SimplePlannerDebug.msg
src/grudsby_simple_planner/src/: grudsby_simple_planner.cpp
src/grudsby_simple_sim/: package.xml
src/grudsby_simple_sim/src/: simple_grudsby_sim_node.cpp
src/grudsby_simple_sim_gui/: package.xml  setup.py
src/grudsby_simple_sim_gui/scripts/: grudsby_gui
src/grudsby_simple_sim_gui/src/grudsby_gui/: grudsby_gui.py
src/grudsby_sweeping/: CMakeLists.txt  package.xml
src/grudsby_sweeping/include/: Vector2.hpp  boustrophedon.h  parsePath.h  segment.h  sign.h  slice.h  winding_num.h
src/grudsby_sweeping/launch/: grudsby_sweeping.launch
src/grudsby_sweeping/msg/: MowingPlan.msg
src/grudsby_sweeping/scripts/: planning_client.py
src/grudsby_sweeping/src/: boustrophedon.cpp  boustrophedon_node.cpp  parsePath.cpp  segment.cpp  sign.cpp  slice.cpp
src/grudsby_tools/: CMakeLists.txt  package.xml
src/grudsby_tools/scripts/: gps_spoofer.py  laser_spoofer.py  quat2rot.py
src/grudsby_vision/scan_filter/: CMakeLists.txt  package.xml  setup.py
src/grudsby_vision/scan_filter/config/: scan_filter.yaml  scan_filter_marking.yaml
src/grudsby_vision/scan_filter/scripts/: scan_inf_repeater.py
src/grudsby_vision/tegra_stereo/: .gitignore  CMakeLists.txt  README.md
src/grudsby_vision/tegra_stereo/cfg/: left.yaml  right.yaml
src/grudsby_vision/tegra_stereo/include/tegra_stereo/: tegra_stereo_proc.hpp  util.h
src/grudsby_vision/tegra_stereo/launch/: tegra_stereo.launch
src/grudsby_vision/tegra_stereo/src/: tegra_stereo_proc.cpp
src/josh_sim/grudsby_gui/: CMakeLists.txt
system_setup/: setup.sh
utilities/: navstack_debug.rviz
utilities/grudsby_gazebo/: CMakeLists.txt
utilities/grudsby_gazebo/models/: moveToModelLibrary.sh
utilities/grudsby_gazebo/models/grass/: model.config
utilities/grudsby_gazebo/models/grudsby/meshes/: caster.STL  grudsby_body.STL
utilities/grudsby_gazebo/models/grudsby_caster/: model.config
utilities/grudsby_gazebo/models/grudsby_caster/meshes/: caster_wheel_mount.STL
utilities/grudsby_gazebo/models/grudsby_new/: model.sdf
utilities/grudsby_gazebo/src/: grudsby_plugin.cpp  vel.cc
utilities/grudsby_gazebo/worlds/: grudsby.world
(+176 files in other folders)
