<?xml version="1.0"?>
<package>
  <name>grudsby_controller</name>
  <version>0.0.0</version>
  <description>Grudsby ros_control</description>

  <maintainer email="zhenrychen@cmu.edu">henry</maintainer>
  <license>GRUDSBY</license>


  <build_depend>roslaunch</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
 
</package>
