<?xml version="1.0"?>
<package>
  <name>grudsby_costmap</name>
  <version>0.0.0</version>
  <description> costmap </description>

  <maintainer email="jphaneuf@andrewcmu.edu">joe</maintainer>
  <license>GRUDSBY</license>


  <build_depend>roslaunch</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
