<?xml version="1.0"?>
<package>
  <name>imu_repeater</name>
  <version>0.0.0</version>
  <description>Re-transmits the IMU with different covariances based on speed</description>

  <maintainer email="jjbennet@andrew.cmu.edu">josh</maintainer>
  <license>GRUDSBY</license>


  <build_depend>roslaunch</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
