<?xml version="1.0"?>
<package>
  <name>grudsby_lowlevel</name>
  <version>0.0.0</version>
  <description>Takes care of Serial Comms</description>

  <maintainer email="zhenrychen@cmu.edu">henry</maintainer>
  <license>GRUDSBY</license>


  <build_depend>roslaunch</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
