<?xml version="1.0"?>
<package>
  <name>grudsby_rfcomms</name>
  <version>0.0.0</version>
  <description>Takes care of wifi and other RF</description>

  <maintainer email="zhenrychen@cmu.edu">henry</maintainer>
  <license>GRUDSBY</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>



</package>
